--- a/eng/actions/git-version/action.yml
+++ b/eng/actions/git-version/action.yml
@@ -11,6 +11,9 @@ outputs:
   versionBuild:
     description: The version build holding the Git commit ID
     value: ${{ steps.gitversion-execute.outputs.versionSourceSha }}
+  versionRevision:
+    description: The revison for the assembly version
+    value: ${{ steps.gitversion-execute.outputs.CommitsSinceVersionSource }}
 
 runs:
   using: "composite"
@@ -25,3 +28,4 @@ runs:
     uses: gittools/actions/gitversion/execute@v0.9.15
     with:
       useConfigFile: true
+      configFilePath: GitVersion.yml
