--- a/samples/AspNetSpa/Properties/launchSettings.json
+++ b/samples/AspNetSpa/Properties/launchSettings.json
@@ -22,6 +22,7 @@
       "privateKey": "C:\\Users\\mko\\.ssh\\id_rsa",
       "userName": "pi",
       "hostName": "192.168.1.106",
+      "hostPort": 22,
       "publishOnDeploy": true
     }
   },
