--- a/src/Extension/RemoteDebuggerLauncher/RemoteDebuggerLauncher.csproj
+++ b/src/Extension/RemoteDebuggerLauncher/RemoteDebuggerLauncher.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Commands\CleanOutputCommand.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="ProjectSystem\Extensions\ProjectSystemUnconfiguredProjectExtensions.cs" />
+    <Compile Include="Resources\ImagesMonikers.cs" />
     <Compile Include="Services\Implementation\PublishService.cs" />
     <Compile Include="Services\Implementation\IVsOutputWindowPaneExtensions.cs" />
     <Compile Include="Extensions\VsInteropExtensions.cs" />
@@ -134,6 +135,9 @@
     </None>
     <None Include="Commands\readme.md" />
     <None Include="Extensions\readme.md" />
+    <Content Include="Images.imagemanifest">
+      <IncludeInVSIX>true</IncludeInVSIX>
+    </Content>
     <None Include="Infrastructure\readme.md" />
     <None Include="Options\readme.md" />
     <None Include="ProjectSystem\Extensions\readme.md" />
@@ -221,10 +225,21 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
+    <Resource Include="Resources\IconLaunchProfile.xaml">
+      <SubType>Designer</SubType>
+      <Generator>XamlIntelliSenseFileGenerator</Generator>
+    </Resource>
     <VSCTCompile Include="RemoteDebuggerLauncherPackage.vsct">
       <ResourceName>Menus.ctmenu</ResourceName>
     </VSCTCompile>
     <Content Include="Resources\Commands.png" />
+    <Resource Include="Resources\IconLaunchProfile.png" />
+    <Resource Include="Resources\IconCleanOutput.png" />
+    <Resource Include="Resources\IconDeployOutput.png" />
+    <Resource Include="Resources\IconInstallDotnet.png" />
+    <Resource Include="Resources\IconInstallDebugger.png" />
+    <Resource Include="Resources\IconSetupSsh.png" />
+    <Resource Include="Resources\IconToolWindow.png" />
     <Content Include="Resources\VSPackage.ico" />
   </ItemGroup>
   <ItemGroup>
@@ -233,6 +248,42 @@
       <ManifestResourceName>VSPackage</ManifestResourceName>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\IconCleanOutput.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Resource>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\IconDeployOutput.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Resource>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\IconInstallDotnet.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Resource>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\IconInstallDebugger.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Resource>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\IconSetupSsh.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Resource>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\IconToolWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Resource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(VSToolsPath)\VSSDK\Microsoft.VsSDK.targets" Condition="'$(VSToolsPath)' != ''" />
