--- a/samples/WebAspMvc/Properties/launchSettings.json
+++ b/samples/WebAspMvc/Properties/launchSettings.json
@@ -1,21 +1,13 @@
-﻿{
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:18499",
-      "sslPort": 44346
-    }
-  },
+{
   "profiles": {
-    "WebApplication1": {
+    "WebAspMvc": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7246;http://localhost:5164",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "https://localhost:7246;http://localhost:5164"
     },
     "IIS Express": {
       "commandName": "IISExpress",
@@ -23,6 +15,19 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+    },
+    "SSH Remote": {
+      "commandName": "SecureShellRemoteLaunch",
+      "hostName": "192.168.1.106",
+      "userName": "pi"
+    }
+  },
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "http://localhost:18499",
+      "sslPort": 44346
     }
   }
 }
