--- a/samples/ConsoleApp/Properties/launchSettings.json
+++ b/samples/ConsoleApp/Properties/launchSettings.json
@@ -2,18 +2,17 @@
   "profiles": {
     "ConsoleApp": {
       "commandName": "Project",
-      "commandLineArgs": "foo\r\nbar",
+      "commandLineArgs": "arg0 arg1",
       "environmentVariables": {
-        "Foo": "bar",
-        "Fooz": "aa"
+        "answer": "42"
       },
       "remoteDebugEnabled": false
     },
     "SSH Remote": {
       "commandName": "SecureShellRemoteLaunch",
-      "commandLineArgs": "foo bar",
+      "commandLineArgs": "arg0 arg1",
       "environmentVariables": {
-        "foo": "42"
+        "answer": "42"
       },
       "hostName": "192.168.1.106",
       "hostPort": "22",
