--- a/src/Extension/RemoteDebuggerLauncher/RemoteDebuggerLauncher.csproj
+++ b/src/Extension/RemoteDebuggerLauncher/RemoteDebuggerLauncher.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Commands\DeployOutputCommand.cs" />
     <Compile Include="Commands\CleanOutputCommand.cs" />
     <Compile Include="Infrastructure\DirectoryHelper.cs" />
+    <Compile Include="SecureShell\ShellStreamExtensions.cs" />
     <Compile Include="Infrastructure\StringExtensions.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="ProjectSystem\Debugger\LaunchProfileExtensions.cs" />
@@ -84,6 +85,10 @@
     <Compile Include="ProjectSystem\Debugger\IBrowserDebugLaunchSettingsProvider.cs" />
     <Compile Include="ProjectSystem\UnconfiguredPackageServiceFactory.cs" />
     <Compile Include="ProjectSystem\Build\SecureShellDeployService.cs" />
+    <Compile Include="SecureShell\SecureShellKeySetupSettings.cs" />
+    <Compile Include="SecureShell\ISecureShellKeySetupService.cs" />
+    <Compile Include="SecureShell\SecureShellKeyPairCreatorService.cs" />
+    <Compile Include="SecureShell\SecureShellKeySetupService.cs" />
     <Compile Include="VsInterop\OutputPaneTextWriterService.cs" />
     <Compile Include="ProjectSystem\Build\DotnetPublishService.cs" />
     <Compile Include="VsInterop\IVsSolutionFacade.cs" />
