--- a/samples/UnoGuiApp/UnoGuiApp.Skia.Gtk/Properties/launchSettings.json
+++ b/samples/UnoGuiApp/UnoGuiApp.Skia.Gtk/Properties/launchSettings.json
@@ -4,7 +4,7 @@
       "commandName": "Project"
     },
     "SSH Remote": {
-      "commandName": "SecureShellRemoteLaunch",
+      "commandName": "SshRemoteLaunch",
       "environmentVariables": {
         "DISPLAY": ":0.0"
       },
