--- a/samples/WebAspMvc/Properties/launchSettings.json
+++ b/samples/WebAspMvc/Properties/launchSettings.json
@@ -17,7 +17,7 @@
       }
     },
     "SSH Remote": {
-      "commandName": "SecureShellRemoteLaunch",
+      "commandName": "SshRemoteLaunch",
       "hostName": "192.168.1.106",
       "userName": "pi"
     }
