--- a/samples/WebBlazorWasmApp/Server/Properties/launchSettings.json
+++ b/samples/WebBlazorWasmApp/Server/Properties/launchSettings.json
@@ -19,7 +19,7 @@
       "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}"
     },
     "SSH Remote": {
-      "commandName": "SecureShellRemoteLaunch",
+      "commandName": "SshRemoteLaunch",
       "launchBrowser": true,
       "launchUrl": "http://192.168.1.106:5132",
       "environmentVariables": {
