--- a/samples/ConsoleApp/Properties/launchSettings.json
+++ b/samples/ConsoleApp/Properties/launchSettings.json
@@ -14,9 +14,9 @@
       "environmentVariables": {
         "answer": "42"
       },
-      "hostName": "192.168.1.106",
+      "hostName": "ubuntuvm-1804",
       "hostPort": "22",
-      "userName": "pi",
+      "userName": "user",
       "privateKey": "%userprofile%\\.ssh\\id_rsa"
     }
   }
