--- a/samples/ConsoleApp/Properties/launchSettings.json
+++ b/samples/ConsoleApp/Properties/launchSettings.json
@@ -10,24 +10,14 @@
     },
     "SSH Remote": {
       "commandName": "SshRemoteLaunch",
-      "commandLineArgs": "arg0 arg1 arg 3",
+      "commandLineArgs": "arg0 arg1",
       "environmentVariables": {
         "answer": "42"
       },
-      "hostName": "192.168.1.106",
+      "hostName": "ubuntuvm-1804",
       "hostPort": "22",
-      "userName": "pi",
-      "privateKey": "%userprofile%\\.ssh\\id_rsa",
-      "launchBrowser": true,
-      "dotNetInstallFolderPath": "~\\.dotnet",
-      "debuggerInstallFolderPath": "~\\.vsdbg",
-      "appFolderPath": "~\\AppFolder",
-      "publishOnDeploy": false,
-      "deployOnStartDebugging": false,
-      "installDebuggerOnStartDebugging": false
-    },
-    "Profile 1": {
-      "commandName": "SshlRemoteLaunch"
+      "userName": "user",
+      "privateKey": "%userprofile%\\.ssh\\id_rsa"
     }
   }
 }
