added publish mode configuration

--- a/samples/ConsoleApp/Properties/launchSettings.json
+++ b/samples/ConsoleApp/Properties/launchSettings.json
@@ -17,7 +17,9 @@
       "hostName": "ubuntuvm-1804",
       "hostPort": "22",
       "userName": "user",
-      "privateKey": "%userprofile%\\.ssh\\id_rsa"
+      "privateKey": "%userprofile%\\.ssh\\id_rsa",
+      "publishMode": "FrameworkDependant",
+      "publishOnDeploy": true
     }
   }
 }
