added API to change remote file permission

--- a/samples/ConsoleApp/Properties/launchSettings.json
+++ b/samples/ConsoleApp/Properties/launchSettings.json
@@ -18,7 +18,7 @@
       "hostPort": "22",
       "userName": "pi",
       "privateKey": "%userprofile%\\.ssh\\id_rsa",
-      "publishMode": "FrameworkDependant",
+      "publishMode": "SelfContained",
       "publishOnDeploy": true
     }
   }
