--- a/samples/ConsoleApp/Properties/launchSettings.json
+++ b/samples/ConsoleApp/Properties/launchSettings.json
@@ -14,10 +14,12 @@
       "environmentVariables": {
         "answer": "42"
       },
-      "hostName": "ubuntuvm-1804",
+      "hostName": "raspberrypi",
       "hostPort": "22",
-      "userName": "user",
-      "privateKey": "%userprofile%\\.ssh\\id_rsa"
+      "userName": "pi",
+      "privateKey": "%userprofile%\\.ssh\\id_rsa",
+      "publishMode": "SelfContained",
+      "publishOnDeploy": true
     }
   }
 }
