--- a/src/Extension/RemoteDebuggerLauncherUI/RemoteDebuggerLauncherUI.csproj
+++ b/src/Extension/RemoteDebuggerLauncherUI/RemoteDebuggerLauncherUI.csproj
@@ -136,9 +136,9 @@
       <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Threading" Version="17.4.33" />
-    <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="4.4.0" />
-    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.4.0" />
-    <PackageReference Include="Microsoft.CodeAnalysis.VisualBasic" Version="4.4.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="4.4.0" ExcludeAssets="runtime"/>
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.4.0" ExcludeAssets="runtime"/>
+    <PackageReference Include="Microsoft.CodeAnalysis.VisualBasic" Version="4.4.0" ExcludeAssets="runtime"/>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\SigningKey.snk">
