--- a/samples/UnoGuiApp/UnoGuiApp.Skia.Gtk/UnoGuiApp.Skia.Gtk.csproj
+++ b/samples/UnoGuiApp/UnoGuiApp.Skia.Gtk/UnoGuiApp.Skia.Gtk.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType Condition="'$(Configuration)'=='Release'">WinExe</OutputType>
     <OutputType Condition="'$(Configuration)'=='Debug'">Exe</OutputType>
@@ -24,4 +24,7 @@
     <PackageReference Include="SkiaSharp.Skottie" Version="2.88.3" />
   </ItemGroup>
   <Import Project="..\UnoGuiApp.Shared\UnoGuiApp.Shared.projitems" Label="Shared" />
+  <ItemGroup>
+    <_Globbed_Compile Remove="GlobalSuppressions.cs" />
+  </ItemGroup>
 </Project>
