--- a/src/Extension/RemoteDebuggerLauncher/RemoteDebuggerLauncher.csproj
+++ b/src/Extension/RemoteDebuggerLauncher/RemoteDebuggerLauncher.csproj
@@ -90,6 +90,7 @@
     <Compile Include="SecureShell\ISecureShellKeySetupService.cs" />
     <Compile Include="SecureShell\SecureShellKeyPairCreatorService.cs" />
     <Compile Include="SecureShell\SecureShellKeySetupService.cs" />
+    <Compile Include="Commands\SetupHttpsCommand.cs" />
     <Compile Include="VsInterop\OutputPaneTextWriterService.cs" />
     <Compile Include="ProjectSystem\Build\DotnetPublishService.cs" />
     <Compile Include="VsInterop\IVsSolutionFacade.cs" />
@@ -204,7 +205,9 @@
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Data" />
     <Reference Include="System.Design" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Net.Http" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml" />
     <Reference Include="WindowsBase" />
@@ -274,7 +277,7 @@
     <Resource Include="Resources\IconInstallDotnet.png" />
     <Resource Include="Resources\IconInstallDebugger.png" />
     <Resource Include="Resources\IconSetupSsh.png" />
-    <Resource Include="Resources\IconToolWindow.png" />
+    <Resource Include="Resources\IconSetupHttps.png" />
     <Content Include="Resources\Logo.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <IncludeInVSIX>true</IncludeInVSIX>
@@ -323,7 +326,7 @@
     </Resource>
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\IconToolWindow.xaml">
+    <Resource Include="Resources\IconSetupHttps.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Resource>
