--- a/src/Tests/RemoteDebuggerLauncherUnitTests/RemoteDebuggerLauncherUnitTests.csproj
+++ b/src/Tests/RemoteDebuggerLauncherUnitTests/RemoteDebuggerLauncherUnitTests.csproj
@@ -49,7 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="..\..\Extension\GlobalAssemblyInfo.cs">
-      <Link>GlobalAssemblyInfo.cs</Link>
+      <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="CertificateServicesUnitTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
