added command UI

--- a/src/Extension/RemoteDebuggerLauncherUI/RemoteDebuggerLauncherUI.csproj
+++ b/src/Extension/RemoteDebuggerLauncherUI/RemoteDebuggerLauncherUI.csproj
@@ -52,7 +52,9 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands\ViewModels\SetupModeViewModel.cs" />
     <Compile Include="Commands\ViewModels\IPasswordProvider.cs" />
+    <Compile Include="Commands\ViewModels\SetupHttpsViewModel.cs" />
     <Compile Include="Commands\ViewModels\SetupSshViewModel.cs" />
     <Compile Include="Commands\ViewModels\InstallDebuggerViewModel.cs" />
     <Compile Include="Commands\ViewModels\VersionViewModel.cs" />
@@ -64,6 +66,9 @@
     <Compile Include="Commands\Views\HostNameValidationRule.cs" />
     <Compile Include="Commands\Views\InstallDebuggerDialogWindow.xaml.cs">
       <DependentUpon>InstallDebuggerDialogWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Commands\Views\SetupHttpsDialogWindow.xaml.cs">
+      <DependentUpon>SetupHttpsDialogWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Commands\Views\SetupSshDialogWindow.xaml.cs">
       <DependentUpon>SetupSshDialogWindow.xaml</DependentUpon>
@@ -81,6 +86,10 @@
     </Compile>
     <Compile Include="Utilities\ViewModelBase.cs" />
     <Page Include="Commands\Views\InstallDebuggerDialogWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Commands\Views\SetupHttpsDialogWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
