--- a/src/Extension/RemoteDebuggerLauncherShared/RemoteDebuggerLauncherShared.csproj
+++ b/src/Extension/RemoteDebuggerLauncherShared/RemoteDebuggerLauncherShared.csproj
@@ -44,6 +44,7 @@
       <Link>Properties\GlobalAssemblyInfo.cs</Link>
     </Compile>
     <Compile Include="SecureShell\ISecureShellKeyPairCreatorService.cs" />
+    <Compile Include="Shared\SetupMode.cs" />
     <Compile Include="Shared\PublishMode.cs" />
     <Compile Include="Shared\Constants.cs" />
     <Compile Include="Shared\DotnetInstallationKind.cs" />
