--- a/samples/WebAspSpa/Properties/launchSettings.json
+++ b/samples/WebAspSpa/Properties/launchSettings.json
@@ -28,7 +28,9 @@
       "userName": "pi",
       "hostName": "192.168.1.106",
       "hostPort": 22,
-      "publishOnDeploy": true
+      "publishOnDeploy": true,
+      "publishMode": "FrameworkDependant",
+      "launchBrowser": true
     },
     "WSL": {
       "commandName": "WSL2",
