--- a/src/Extension/RemoteDebuggerLauncherUI/RemoteDebuggerLauncherUI.csproj
+++ b/src/Extension/RemoteDebuggerLauncherUI/RemoteDebuggerLauncherUI.csproj
@@ -43,20 +43,18 @@
     <Reference Include="netstandard" />
     <Reference Include="System" />
     <Reference Include="System.Design" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Drawing.Design" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xaml">
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
     </Reference>
-    <Reference Include="System.Xml" />
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands\ViewModels\SetupModeViewModel.cs" />
     <Compile Include="Commands\ViewModels\IPasswordProvider.cs" />
+    <Compile Include="Commands\ViewModels\SetupHttpsViewModel.cs" />
     <Compile Include="Commands\ViewModels\SetupSshViewModel.cs" />
     <Compile Include="Commands\ViewModels\InstallDebuggerViewModel.cs" />
     <Compile Include="Commands\ViewModels\VersionViewModel.cs" />
@@ -68,6 +66,9 @@
     <Compile Include="Commands\Views\HostNameValidationRule.cs" />
     <Compile Include="Commands\Views\InstallDebuggerDialogWindow.xaml.cs">
       <DependentUpon>InstallDebuggerDialogWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Commands\Views\SetupHttpsDialogWindow.xaml.cs">
+      <DependentUpon>SetupHttpsDialogWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Commands\Views\SetupSshDialogWindow.xaml.cs">
       <DependentUpon>SetupSshDialogWindow.xaml</DependentUpon>
@@ -85,6 +86,10 @@
     </Compile>
     <Compile Include="Utilities\ViewModelBase.cs" />
     <Page Include="Commands\Views\InstallDebuggerDialogWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Commands\Views\SetupHttpsDialogWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -128,12 +133,17 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.VisualStudio.SDK" Version="17.1.32210.191" ExcludeAssets="runtime">
+    <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.3">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.SDK" Version="17.4.33103.184" ExcludeAssets="runtime">
       <IncludeAssets>compile; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.VisualStudio.Threading">
-      <Version>17.2.32</Version>
-    </PackageReference>
+    <PackageReference Include="Microsoft.VisualStudio.Threading" Version="17.4.33" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Common" Version="4.4.0" ExcludeAssets="runtime" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.4.0" ExcludeAssets="runtime" />
+    <PackageReference Include="Microsoft.CodeAnalysis.VisualBasic" Version="4.4.0" ExcludeAssets="runtime" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\SigningKey.snk">
