--- a/.github/workflows/admin-cleanup.yml
+++ b/.github/workflows/admin-cleanup.yml
@@ -1,4 +1,4 @@
-name: 'Admin: Delete old workflow runs'
+name: 'Admin: workflow cleanup'
 on:
   workflow_dispatch:
     inputs:
@@ -13,6 +13,7 @@ on:
       delete_workflow_pattern:
         description: 'The name or filename of the workflow. if not set then it will target all workflows.'
         required: false
+        default: project-ci.yml
       delete_workflow_by_state_pattern:
         description: 'Remove workflow by state: active, deleted, disabled_fork, disabled_inactivity, disabled_manually'
         required: true
@@ -39,13 +40,17 @@ on:
       dry_run:
         description: 'Only log actions, do not perform any delete operations.'
         required: false
+        default: false
+  schedule:
+    - cron: '0 0 1 * *'
+# Run monthly, at 00:00 on the 1st day of month.
 
 jobs:
   del_runs:
     name: Delete Runs
     runs-on: ubuntu-latest
     steps:
-      - name: Delete workflow runs
+      - name: Delete CI workflow runs
         uses: Mattraks/delete-workflow-runs@v2
         with:
           token: ${{ github.token }}
