--- a/.gitignore
+++ b/.gitignore
@@ -352,3 +352,5 @@ MigrationBackup/
 # Additional folders to exclude
 /samples/net6/WebAspSpa/ClientApp/.angular/
 /samples/net6/WebAspSpa/.config
+/samples/net8/WebAspSpa/ClientApp/.angular/
+/samples/net8/WebAspSpa/.config
